--- a/lab8/index.html
+++ b/lab8/index.html
@@ -17,6 +17,7 @@
             <li><a href="./index6.html">Bodlogo-6</a></li>
             <li><a href="./index7.html">Bodlogo-7</a></li>
             <li><a href="./index8.html">Bodlogo-8</a></li>
+            <li><a href="./index9.html">Bodlogo-9</a></li>
         </ul>
     </div>
 </body>
